force-app/main/default/objects/Opportunity/fields/Leading_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Leading_Competitor__c</fullName>
    <label>Leading Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitors</valueSetName>
    </valueSet>
</CustomField>