force-app/main/default/objects/Opportunity/fields/MostExpensiveCompetitor__c.field-meta.xml
<CustomField>
    <fullName>MostExpensiveCompetitor__c</fullName>
    <label>Most Expensive Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitors</valueSetName>
    </valueSet>
</CustomField>