force-app/main/default/objects/Opportunity/fields/MostExpensiveCompetitorPrice__c.field-meta.xml
<CustomField>
    <fullName>MostExpensiveCompetitorPrice__c</fullName>
    <label>Most Expensive Competitor Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>